samples/_failures_safe/1761350117_fe41d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07d8edb5.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_07d8edb5.c:134:5: error: expected expression at end of input
  134 |     corners[6] =
      |     ^~~~~~~
./samples/SAFE/__tmp_07d8edb5.c:134:5: error: expected declaration or statement at end of input
